window-group: Don't create a region when we have an unredirected window

We don't do anything with it other than modify an existing region.

https://bugzilla.gnome.org/show_bug.cgi?id=677116